--- a/examples.html
+++ b/examples.html
@@ -11,7 +11,7 @@
         <div>TODO write content</div>
         <script type="text/javascript">
             ajсycle({
-                method: 'post',
+                method: 'POST',
                 encoding: 0,
                 url: './',
                 values: {
